# Interaction-Guided-Aerial-Navigation

./: .gitignore  README.md  citations.txt
drone_description/config/: x500v2_view.rviz
drone_description/launch/: load_one.launch.xml
drone_description/urdf/: X500V2.urdf.xacro
drone_viz/: package.xml
drone_viz/config/: drone_viz.rviz
images/: frames_2026-02-03_20.42.02.gv
mycode/: agent.md
mycode/drone_description/: CMakeLists.txt  package.xml
mycode/drone_description/config/: x500v2_view.rviz
mycode/drone_description/meshes/: X500V2_LowPoly.stl
mycode/drone_description/src/: arena_markers_node.cpp
mycode/drone_description/urdf/: X500V2.urdf.xacro
mycode/drone_viz/: CMakeLists.txt
mycode/drone_viz/config/: drone_viz.rviz
mycode/drone_viz/launch/: visualize.launch.py  visualize.launch.xml
mycode/offboard_test/: CMakeLists.txt  package.xml
mycode/offboard_test/launch/: offboard_test.launch.xml
mycode/offboard_test/scripts/: plot_hover_position.py  preflight.sh
mycode/offboard_test/src/: force_drive_node.cpp  force_estimator_node.cpp  offboard_test_node.cpp  vision_bridge_node.cpp
optitrack/: CMakeLists.txt  README.md  package.xml
optitrack/include/optitrack/include/: optitrack_data_publisher.h  optitrack_data_publisher_with_CSVs.h
optitrack/src/: optitrack_data_publisher.cpp  optitrack_data_publisher_with_CSVs.cpp  optitrack_subscriber_with_statistics.cpp
rpi/imu_publisher/: package.xml  setup.py
rpi/imu_publisher/imu_publisher/: imu_node.py  vision_bridge.py
