<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_test</name>
  <version>1.0.0</version>
  <description>Offboard control test for PX4 with OptiTrack position estimation</description>
  <maintainer email="chenyu.zhu@example.com">Chenyu Zhu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <build_depend>eigen</build_depend>

  <!-- Launch file dependencies -->
  <exec_depend>optitrack</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>drone_description</exec_depend>
  <exec_depend>drone_viz</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
